--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   stacked: ^2.0.2
+  hexcolor: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
