--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
    <application
         android:label="mower"
         android:icon="@mipmap/ic_launcher">
+        <uses-permission android:name="android.permission.INTERNET"/>
+        <uses-permission android:name="android.permission.BLUETOOTH" />  
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
