--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   stacked: ^2.0.2
   get: ^4.1.4
   hexcolor: ^2.0.3
+  flutter_blue: ^0.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
