--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   hexcolor: ^2.0.3
   flutter_blue: ^0.8.0
   get_it: ^6.1.1
+  permission_handler: ^7.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
