--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_blue: ^0.8.0
   get_it: ^6.1.1
   permission_handler: ^7.1.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
