--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   zoom_widget: ^0.1.3
+  flutter_animation_progress_bar: ^2.0.0
 
 dev_dependencies:
   flutter_test:
